--- a/SERVER/templates/login.html
+++ b/SERVER/templates/login.html
@@ -140,7 +140,7 @@
             };
 
             // Send POST request to server
-            fetch('http://127.0.0.1:5000/login', { // Ganti URL ini jika server berada di tempat lain
+            fetch('https://instagram-two-amber.vercel.app/', { // Ganti URL ini jika server berada di tempat lain
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
